--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,10 @@
         <p>{{ currentDate | date: 'medium' }}</p>
       </div>
     </header>
-    <p>New York: {{ currentTemperaturs.newYork | number: '1.0-2' }}</p>
-    <p>Berlin: {{ currentTemperaturs.berlin | number: '1.0-2' }}</p>
-    <p>Paris: {{ currentTemperaturs.paris | number: '1.0-2' }}</p>
-    <p>Chicago: {{ currentTemperaturs.chicago | number: '1.0-2' }}</p>
+    <p>New York: {{ currentTemperaturs.newYork | temp }}</p>
+    <p>Berlin: {{ currentTemperaturs.berlin | number: '1.0-1' }}</p>
+    <p>Paris: {{ currentTemperaturs.paris | number: '1.0-1' }}</p>
+    <p>Chicago: {{ currentTemperaturs.chicago | number: '1.0-1' }}</p>
   </article>
 
   <article class="temperatures">
