--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,9 @@
         <p>{{ currentDate | date: 'medium' }}</p>
       </div>
     </header>
-    <p>New York: {{ currentTemperaturs.newYork | temp }}</p>
-    <p>Berlin: {{ currentTemperaturs.berlin | number: '1.0-1' }}</p>
-    <p>Paris: {{ currentTemperaturs.paris | number: '1.0-1' }}</p>
+    <p>New York: {{ currentTemperaturs.newYork | number: '1.0-1' | temp: 'cel':'fah' }}</p>
+    <p>Berlin: {{ currentTemperaturs.berlin | temp: 'fah':'cel' }}</p>
+    <p>Paris: {{ currentTemperaturs.paris | temp: 'cel' }}</p>
     <p>Chicago: {{ currentTemperaturs.chicago | number: '1.0-1' }}</p>
   </article>
 
